bad/var_decl_init_invalid_conversion_class_bool.example_compiler_output
ERROR
[1mbad/var_decl_init_invalid_conversion_class_bool.lat:5:6: [1;31merror: [0;1mincompatible types: cannot assign variable of type `Y` with an expression of type `boolean`[m
	Y x = true;
	    [1;32m^[m
